packages/front_end/src/App.css
@font-face {
  font-family: 'pong';
  src: local("pong"),
    url("./fonts/pong.ttf") format("truetype");
}

@keyframes rotation {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

@keyframes shake {
  0% { 
  transform: rotate(8deg);
  }
  50% {
  transform: rotate(-8deg);
  }
  70% {
  transform: rotate(8deg);
  }
  100% {
  transform: rotate(0deg);
  }
 }
 #anim:hover {
   animation: shake 500ms ease-in-out forwards;
 }

 :root {
  --button-color: white;
  --icon-color: white;
  --icon-hover-color: #001828;
 }

.backgroundContainer {
  min-height: 100vh;
  display: flex !important;
  justify-content: center;
  align-items: center;
}

.buttonBackground {
  color: var(--button-color);
}

.buttonBackground:hover {
  background-color: #FFFFFF !important;
  --buttoncolor: white;
  --icon-color: #001828;
}

.chatBar {
  position: relative;
  box-shadow: none;
}

.chatOptionBars {
  flex-grow: 0;
  background-color: var(--primary-color);
}

.chatSection {
    background-color: var(--secondary-color);
    border-radius: 10px;
    height: 81.3vh;
    display: flex;
    flex-direction: column;
}

.chatTextField {
  display: flex;
  align-items: flex-end;
  width: 100%;
}

.conversationStyle {
  flex-grow: 1;
  margin-left: 20px;
  margin-right: 20px;
}

.dashboardContents {
  color: #2067a1;
  font-size: 15px;
  margin-bottom: 25px;
}
.dashboardTitle {
  text-align: center;
}

.fatCat {
  position: fixed;
  left: 55px;
  top: 1px;
  animation: rotation 2s infinite linear;
}

.conversationStyle {
  flex-grow: 1;
  margin-left: 20px;
  margin-right: 20px;
}
  
.focusedTextField .MuiInputLabel-root.Mui-focused {
  color: white;
}
.focusedTextField .MuiOutlinedInput-root.Mui-focused fieldset {
  border-width: 1px;
  border-color: white;
}

.font-face-gm { 
  font-family: "pong";
}

.friendsAndChannelBoxes {
  background-color: var(--secondary-color);
  overflow-y: auto;
  overflow-x: auto;
  height: 39vh;
  border-radius: 10px;
  padding: 10px;
}
.friendsAndChannelStyle {
  width: min(35vw, 400px);
  margin-left: 20px;
}
.gameBoxBar {
  background-color: var(--primary-color);
  text-align: center;
  font-weight: bold;
  font-size: 25px;
  width: 50vw;
  color: white;
}
.homeDashboard {
  position: fixed;
  display: flex;
  top: 0;
  left: 0;
}

.homeDashboardBoxes {
  margin-left: 20px;
  margin-right: 20px; /* for space between boxes and game div */
  width: min(30vw, 310px);
}
.homeGameNChat {
  margin-top: 114px;
  text-align: center;
  font-weight: bold;
  font-size: 25px;
  max-width: 50vw;
}

.homeScoreBar {
  background-color: var(--primary-color);
  box-shadow: 4;
  text-align: center;
  font-weight: bold;
  font-size: 25px;
  position: relative;
}

.homeScoreBox {
  background-color: var(--secondary-color);
  height: 27vh;
  box-shadow: 4;
  border-radius: 10px;
}

.iconThemeBackground {
  color: var(--icon-color);
}

.iconThemeBackground:hover {
  color: var(--icon-hover-color);
}

.ingameChatBar {
  text-align: center;
  font-weight: bold;
  font-size: 25px;
  width: 50vw;
}

.ingameChatBox {
  background-color: var(--secondary-color);
  height: 25vh;
  max-height: 292px;
  border-radius: 10px;
}

.loginBox {
  background-color: white;
  border-radius: 10px;
}

.loginTextFieldText input {
  color:black;
}
.loginTextField .MuiOutlinedInput-root .MuiOutlinedInput-notchedOutline {
  border-color: var(--secondary-color);
  border-width: 1px;
}
.loginTextField .MuiInputLabel-root {
  color: grey;
  border-width: 1px;
  display: flex;
  align-items: center;
}
.loginTextField .MuiOutlinedInput-root:hover .MuiOutlinedInput-notchedOutline {
  border-color: var(--secondary-color);
  border-width: 2px;
}
.loginTextField .MuiTypography-root {
  color: grey;
}
.mainContainerStyle {
  display: flex;
  position: fixed;
  top: 9vh;
  left: 0;
  right: 0;
}

.pokeball {
  position: fixed;
  left: 15px;
  top: 20px;
  color: white;
  animation: rotation 20s infinite linear;
}

.profileButtonBox {
  background-color: var(--primary-color);
}

.profileButtonStyle {
  position: fixed;
  right: 15px;
  top: 5px;
}

.profileMainBox {
  background-color: var(--primary-color);
}

.profilePageButtons:hover {
  background-color: white !important;
  color: var(--button-color);
}

.profilePageButtons .MuiButton-outlined {
  background-color: var(--secondary-color);
  color: white;
  border: 1px solid white;
  width: 99%;
}

.profileSection { 
  background-color: var(--primary-color);
}

.profileStats {
  text-align: left;
  background-color: teal;
}

.signInStyle {
  margin-top: 1;
  text-align: center;
  color: var(--secondary-color);
}

.themeButtonContextOption {
  position: fixed;
  right: 80px;
  top: 25px;
}

.themeButtonStyle {
  position: fixed;
  right: 80px;
  top: 14px;
}

.toolbarBurgerMenu {
  position: fixed;
  top: 20px;
  left: 50px;
}

.toolbarButtons {
  display: block;
  border: 1px solid white;
  background-color: white;
}

.toolbarButtonsSpace {
  position: fixed;
  top: 20px;
}


.toolbarButtons:hover {
  background-color: white;
  color: var(--button-color);
}

.toolbar .MuiAppBar-root {
  background-image: none;
  background-color: var(--secondary-color);
}

